--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookie-parser": "latest",
     "cors": "^2.8.3",
     "express": "^4.13.4",
+    "express-paginate": "^0.2.2",
     "express-session": "^1.15.2",
     "express-validator": "^3.1.3",
     "glob": "latest",
@@ -25,6 +26,7 @@
     "mailgun-js": "^0.7.10",
     "moment": "^2.13.0",
     "mongoose": "^4.4.13",
+    "mongoose-paginate": "^5.0.3",
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
     "passport": "^0.3.2",
