--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "jsonwebtoken": "^5.7.0",
     "moment": "^2.13.0",
     "mongoose": "^4.4.13",
+    "mongoose-api-query": "^0.1.1-pre",
     "mongoose-paginate": "^5.0.3",
     "morgan": "^1.7.0",
     "multer": "^1.3.0",
