--- a/you360-ansible/roles/nginx/tasks/main.yml
+++ b/you360-ansible/roles/nginx/tasks/main.yml
@@ -4,9 +4,14 @@
     name=nginx
     update_cache=true
     state=latest
+  tags:
+    - test_ng
 
-#- name: Copy nginx.conf
-#  become: yes
-#  template: src=nginx.conf.j2
-#            dest=/etc/nginx/nginx.conf
-#  notify: reload nginx
+- name: Copy defaults
+ become: yes
+ template:
+   src=default
+   dest=/etc/nginx/sites-available/
+ notify: reload nginx
+ tags:
+   - test_copy
