--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.15.2",
     "express-validator": "^3.1.3",
     "glob": "latest",
+    "jsdoc": "^3.4.3",
     "jsonwebtoken": "^5.7.0",
     "moment": "^2.13.0",
     "mongoose": "^4.4.13",
