Fix documentation requests link

--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "apidoc": {
     "title": "apiDoc",
-    "url" : "https://api.github.com/v1",
+    "url" : "https://you360.herokuapp.com",
     "description": "API server for 360 video."
   }
 }
