--- a/you360-ansible/roles/clonerepo/tasks/main.yml
+++ b/you360-ansible/roles/clonerepo/tasks/main.yml
@@ -47,7 +47,7 @@
   tags:
     - check
 
-- name: "Start example Node.js app."
+- name: "Start  Node.js app."
   command: forever start /home/salama/you360/app.js
   #when: "forever_list.stdout.find('/home/salama/you360/app.js') == -1"
   tags:
