--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   },
   "apidoc": {
     "title": "apiDoc",
-    "url" : "https://you360.herokuapp.com",
+    "url" : "http://45.33.38.90",
     "description": "API server for 360 video."
   }
 }
