--- a/public/docs/serverapi/api_project.json
+++ b/public/docs/serverapi/api_project.json
@@ -1,6 +1,6 @@
 {
   "title": "apiDoc",
-  "url": "https://you360.herokuapp.com",
+  "url": "http://45.33.38.90",
   "description": "API server for 360 video.",
   "name": "you360Server",
   "version": "1.0.0",
@@ -9,7 +9,7 @@
   "apidoc": "0.3.0",
   "generator": {
     "name": "apidoc",
-    "time": "2017-06-19T19:49:06.008Z",
+    "time": "2017-06-19T20:55:33.299Z",
     "url": "http://apidocjs.com",
     "version": "0.17.6"
   }
